updated logo name

--- a/includes/header.html
+++ b/includes/header.html
@@ -1,7 +1,7 @@
 <div class="header container-fluid" data-aos="fade-right">
   <div class="row align-items-center">
     <div class="logo col">
-      <img src="../img/logo.png" alt="">
+      <img src="../img/logo-color.png" alt="">
     </div>
     <div class="header-menu-section col pe-0">
       <div class="header-top" data-aos="fade-down">
