--- a/css/styles.css
+++ b/css/styles.css
@@ -325,11 +325,12 @@ a:focus,
   top: calc(70% - 75px);
   left: calc(30% - 350px);
   display: block;
-  height: 150px;
+  height: auto;
   color: #ffffff;
   font-size: 36px;
   width: 700px;
   padding-top: 22px;
+  padding-bottom: 22px;
   padding-left: 40px;
   z-index: 0;
 }
@@ -359,6 +360,28 @@ a:focus,
 }
 .banner-part img {
   width: 100%;
+}
+.banner-part .btn-learnmore {
+  padding: 10px 40px;
+  border-radius: 6px;
+  text-transform: uppercase;
+  background-color: #262262;
+  font-family: "NoirPro-Bold";
+  color: #ffffff;
+  -webkit-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  transform: translate(0px, 0px);
+}
+.banner-part .btn-learnmore:hover {
+  -webkit-transform: translate(3px, 3px);
+  -ms-transform: translate(3px, 3px);
+  transform: translate(3px, 3px);
+  background-color: #262262;
+  box-shadow: -5px 5px #00a79d;
+  color: #ffffff;
+}
+.banner-part #t {
+  height: 108px;
 }
 
 @-webkit-keyframes slide {
@@ -461,7 +484,6 @@ a:focus,
   text-align: center;
   padding-top: 40px;
 }
-.section-footer .btn-section,
 .section-footer .btn-section {
   padding: 10px 40px;
   border-radius: 6px;
@@ -473,7 +495,6 @@ a:focus,
   -ms-transform: translate(0px, 0px);
   transform: translate(0px, 0px);
 }
-.section-footer .btn-section:hover,
 .section-footer .btn-section:hover {
   -webkit-transform: translate(3px, 3px);
   -ms-transform: translate(3px, 3px);
@@ -658,7 +679,6 @@ a:focus,
 }
 .feature-card .feature-card-details .btn-feature {
   border: none;
-  padding: 0px;
   color: #ffffff;
   font-size: 14px;
   background-color: #00a79d;
@@ -923,8 +943,21 @@ a:focus,
 .inner-body .inner-about-img img {
   width: 100%;
 }
+.inner-body .inner-health-img {
+  max-width: 800px;
+  border-radius: 6px;
+  overflow: hidden;
+  box-shadow: 15px 15px #00a79d;
+  margin-bottom: 50px;
+}
+.inner-body .inner-health-img img {
+  width: 100%;
+}
 .inner-body.inner-product .inner-about-img {
   width: 80%;
+}
+.inner-body.products .inner-about-img {
+  width: 360px;
 }
 @media screen and (max-width: 599px) {
   .inner-body.products .btn-products {
