--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -233,16 +233,26 @@ a,
   }
   .ofoh {
     position: absolute;
-    bottom: 19px;
-    right: 15px;
+    top: -38px;
+    right: 225px;
     color: $light;
-    z-index: -1;
+    z-index: 9 !important;
     padding: 6px 15px;
     border-radius: 40px;
     font-size: 14px;
     @include linear-gradient($primary, $secondary);
     @include xs() {
       display: none;
+    }
+  }
+}
+
+.buy-now {
+  a {
+    font-family: $font-Bold;
+    color: $secondary-red !important;
+    &:hover {
+      color: $light !important;
     }
   }
 }
@@ -652,17 +662,31 @@ a,
       padding: 30px;
       border-radius: 6px;
       margin: 25px 15px;
-      .tm-people {
-        width: 60px;
-        height: 60px;
-        -webkit-border-radius: 50%;
-        border-radius: 50%;
-        -o-object-fit: cover;
-        object-fit: cover;
-        max-width: none;
-      }
     }
   }
+}
+.tm-people {
+  width: 60px;
+  height: 60px;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  max-width: none;
+}
+.tm-people-inner {
+  margin-top: 15px;
+  width: 120px;
+  height: 120px;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  max-width: none;
+}
+
+.starts {
+  color: $primary;
 }
 
 .footer-part {
