--- a/css/styles.css
+++ b/css/styles.css
@@ -290,10 +290,10 @@ a:focus,
 }
 .header .ofoh {
   position: absolute;
-  bottom: 19px;
-  right: 15px;
+  top: -38px;
+  right: 225px;
   color: #ffffff;
-  z-index: -1;
+  z-index: 9 !important;
   padding: 6px 15px;
   border-radius: 40px;
   font-size: 14px;
@@ -309,6 +309,14 @@ a:focus,
   .header .ofoh {
     display: none;
   }
+}
+
+.buy-now a {
+  font-family: "NoirPro-Bold";
+  color: #ef4136 !important;
+}
+.buy-now a:hover {
+  color: #ffffff !important;
 }
 
 .banner-part {
@@ -789,7 +797,8 @@ a:focus,
   border-radius: 6px;
   margin: 25px 15px;
 }
-.testimonial-section .testi-slider .testi-card .tm-people {
+
+.tm-people {
   width: 60px;
   height: 60px;
   -webkit-border-radius: 50%;
@@ -797,6 +806,21 @@ a:focus,
   -o-object-fit: cover;
   object-fit: cover;
   max-width: none;
+}
+
+.tm-people-inner {
+  margin-top: 15px;
+  width: 120px;
+  height: 120px;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  max-width: none;
+}
+
+.starts {
+  color: #00a79d;
 }
 
 .footer-part {
