--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -260,6 +260,17 @@ a,
 .banner-part {
   position: relative;
   z-index: 0;
+  &::before {
+    content: " ";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    // background-color: $dark;
+    @include linear-gradient($secondary, $primary);
+    opacity: 0.7;
+  }
   &.inner {
     .banner-text {
       font-size: 40px;
@@ -268,14 +279,16 @@ a,
     }
   }
   .banner-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
-    top: calc(70% - 75px);
-    left: calc(30% - 350px);
-    display: block;
-    height: auto;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
     color: $light;
     font-size: 36px;
-    width: 700px;
     padding-top: 22px;
     padding-bottom: 22px;
     padding-left: 40px;
@@ -288,16 +301,33 @@ a,
       height: 50px;
       padding: 5px 10px;
     }
-    &::after {
-      content: "";
-      height: 100%;
-      width: 100%;
-      background-color: rgb(239 65 54 / 78%);
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      @include animation(slide 2s);
-      z-index: -1;
+    h1 {
+      font-family: $font-Bold;
+      margin-bottom: 25px;
+      line-height: 100px;
+      position: relative;
+      z-index: 0;
+      &::after,
+      &::before {
+        content: "";
+        position: absolute;
+        width: 20%;
+        height: 70%;
+        border: 3px solid $light;
+        @include animation(slide 2s);
+      }
+      &::before {
+        left: -30px;
+        top: 0px;
+        border-right: none;
+        border-bottom: none;
+      }
+      &::after {
+        right: -30px;
+        bottom: 0px;
+        border-left: none;
+        border-top: none;
+      }
     }
   }
   img {
@@ -314,22 +344,25 @@ a,
     &:hover {
       @include transform(translate(3px, 3px));
       background-color: $secondary;
-      box-shadow: -5px 5px $primary;
+      box-shadow: -5px 5px $light;
       color: $light;
     }
   }
   #t {
-    height: 108px;
+    font-size: 22px;
+    margin-bottom: 20px;
   }
 }
 
 @include keyframes(slide) {
   from {
     width: 0;
+    height: 0;
   }
 
   to {
-    width: 100%;
+    width: 20%;
+    height: 70%;
   }
 }
 
